chore: add tsyringe
