# src/routes/categories.routes.ts
@@ -1,6 +1,6 @@
-import { createCategoryController } from "@useCases/createCategory";
-import { importCategoryController } from "@useCases/importCategory";
-import { listCategoriesController } from "@useCases/listCategories";
+import { CreateCategoryController } from "@useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "@useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "@useCases/listCategories/ListCategoriesController";
 import { Router } from "express";
 import multer from "multer";
 
@@ -10,16 +10,18 @@ const upload = multer({
   dest: "./tmp",
 });
 
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.get("/", listCategoriesController.handle);
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRoutes };
