# src/routes/index.ts
@@ -5,6 +5,6 @@ import { Router } from "express";
 const router = Router();
 
 router.use("/categories", categoriesRoutes);
-router.use("/specification", specificationRoutes);
+router.use("/specifications", specificationRoutes);
 
 export { router };
